# Opal-Koboi

./: AerospaceIntel.ps1  AerospaceIntel.psm1  CG-os.html  CLEARGLASSINC_ARTEMIS_BLUEPRINT.md  CLEARGLASSINC_ARTEMIS_FIELD_MANUAL.md  CLEARGLASSINC_ARTEMIS_PLATFORM_BLUEPRINT.md  CLEARGLASS_PLATFORM_DIRECTIVE.md  ClearglassAerospace-Master.ps1  Clearglassinc_Complete_Documentation.docx  Clearglassinc_System_Architecture.docx  INSTALLATION.md  INSTALLATION_GUIDE.md  LICENSE  LICENSE.txt  PRODUCT_SALES_SHEET.md  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_START.md  README.md  SECURITY.md  SYSTEM_MANIFEST.txt  UserManual.md  api_specification.yaml  app.py  artemis-blueprint.md  buttons.html  clearglassinc.json  config.psd1  data_collector.py  database_init.py  database_schema.sql  generate_docs.js  index.html  market_analyzer.py  ml_engine.py  nexus-omega-enhanced.html  predictive_engine.py  pyproject.toml  requirements.txt
docs/: ClearGlassInc_Artemis_Blueprint.md  ClearGlassInc_Artemis_Self_Evolving_Platform_Design.md  advanced-campaign-system.md  artemis-fawl-remediation-ledger.md  clearglassinc-artemis-architecture.md  clearglassinc-artemis-defense-grade-blueprint.md  clearglassinc-artemis-implementation-blueprint.md  clearglassinc-artemis-platform-audit-2026.md  clearglassinc-artemis-production-audit.md  clearglassinc-artemis-repo-audit-prompt.md  financial-influence-watchdog-v2.1.md  supply-chain-control-plane.md
intelligence/: __init__.py  artemis_deploy_execute.py  artemis_incident_control.py  artemis_policy.py  artemis_self_improvement.py  entity_extractor.py  (+2 more)
(+98 files in other folders)
