[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "clearglass-financial-watchdog"
version = "2.2.0"
description = "Auditable entity extraction for Canadian public-sector financial influence analysis"
readme = "docs/financial-influence-watchdog-v2.1.md"
requires-python = ">=3.10"
license = { text = "Proprietary - ClearGlass Inc." }
authors = [{ name = "ClearGlass Intelligence Team" }]
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
openai = ["openai>=1.40,<3"]
anthropic = ["anthropic>=0.34,<1"]
providers = [
  "openai>=1.40,<3",
  "anthropic>=0.34,<1",
]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
clearglass-watchdog = "intelligence.financial_watchdog_agent:main"

[tool.setuptools]
packages = ["intelligence"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
